@@ -1,0 +1,26 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/xhtml;charset="iso-8859-1 />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+    <meta http-equiv="Content-Language" content="en" />
+		<link href="doxygen.css" rel="stylesheet" type="text/css">
+    <link href="tabs.css" rel="stylesheet" type="text/css">
+	</head>
+
+	<body>
+		<div id="banner">	
+      <h1><a href="http://kimura.univ-montp2.fr/BioPP/" accesskey="1" target="_top">Bio++</a> Class documentation</h1>
+    </div>
+
+    <div class="tabs">
+      <ul>
+        <li><a href="http://kimura.univ-montp2.fr/BioPP/Documents/ClassDocumentation/Utils/html/index.html" target="_top"><span>Utils</span></a></li>
+        <li><a href="http://kimura.univ-montp2.fr/BioPP/Documents/ClassDocumentation/NumCalc/html/index.html" target="_top"><span>NumCalc</span></a></li>
+        <li><a href="http://kimura.univ-montp2.fr/BioPP/Documents/ClassDocumentation/Seq/html/index.html" target="_top"><span>SeqLib</span></a></li>
+        <li><a href="http://kimura.univ-montp2.fr/BioPP/Documents/ClassDocumentation/Phyl/html/index.html" target="_top"><span>PhylLib</span></a></li>
+        <li><a href="http://kimura.univ-montp2.fr/BioPP/Documents/ClassDocumentation/Pop/html/index.html" target="_top"><span>PopGenLib</span></a></li>
+      </ul>
+    </div>
+
+		<br />
+
